--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/56402b4728.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-grey">
   <div id="root"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
